libtextstyle: Document the hyperlink support.
* libtextstyle/doc/libtextstyle.texi (The NO_TERM_HYPERLINKS variable): New
section.
(Hyperlinks): New subsection.
(The abstract styled_ostream class): Document styled_ostream_get_hyperlink_ref,
styled_ostream_get_hyperlink_id, styled_ostream_set_hyperlink.
(The term_ostream class): Document term_ostream_get_hyperlink_ref,
term_ostream_get_hyperlink_id, term_ostream_set_hyperlink.
(The html_ostream class): Document html_ostream_get_hyperlink_ref,
html_ostream_set_hyperlink_ref.
* libtextstyle/NEWS: Mention it.

--- a/libtextstyle/NEWS
+++ b/libtextstyle/NEWS
@@ -1,4 +1,15 @@
 New in 0.21:
+* Added support for emitting hyperlinks.
+  New functions:
+       TYPE                               FUNCTION
+  styled_ostream_t          styled_ostream_set_hyperlink
+  styled_ostream_t          styled_ostream_get_hyperlink_ref
+  styled_ostream_t          styled_ostream_get_hyperlink_id
+  term_ostream_t            term_ostream_set_hyperlink
+  term_ostream_t            term_ostream_get_hyperlink_ref
+  term_ostream_t            term_ostream_get_hyperlink_id
+  html_ostream_t            html_ostream_set_hyperlink_ref
+  html_ostream_t            html_ostream_get_hyperlink_ref
 * The example programs support the NO_COLOR environment variable,
   as specified in https://no-color.org/.
 
