--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 Version 0.20.2 - April 2020
 
+* Programming languages support:
+  - Desktop Entry:
+    The value of the 'Icon' property is no longer extracted into the POT file
+    by xgettext.  The documentation explains how to localize icons.
+
 * Runtime behaviour:
   - Fixed a multithread-safety bug on Cygwin and native Windows.
 
