gettext, ngettext: Fix the expansion of '\\' and octal escape sequences.
* gettext-runtime/src/gettext.c (expand_escape): Don't swallow the expansion
of '\\' and octal escape sequences.
* gettext-runtime/src/ngettext.c (expand_escape): Likewise.
* gettext-tools/tests/tstgettext.c (expand_escape): Likewise.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 Version 0.20.2 - April 2020
 
 * Programming languages support:
+  - Shell:
+    The programs 'gettext', 'ngettext', when invoked with option -e, now
+    expand '\\' and octal escape sequences, instead of swallowing them.
+    (Bug present since the beginning.)
   - Desktop Entry:
     The value of the 'Icon' property is no longer extracted into the POT file
     by xgettext.  The documentation explains how to localize icons.
