--- a/NEWS
+++ b/NEWS
@@ -2,9 +2,12 @@ Version 0.20.2 - April 2020
 
 * Programming languages support:
   - Shell:
-    The programs 'gettext', 'ngettext', when invoked with option -e, now
-    expand '\\' and octal escape sequences, instead of swallowing them.
-    (Bug present since the beginning.)
+    o The programs 'gettext', 'ngettext', when invoked with option -e, now
+      expand '\\' and octal escape sequences, instead of swallowing them.
+      (Bug present since the beginning.)
+    o xgettext now recognizes 'gettext' program invocations with the '-e'
+      option, such as
+        gettext -e 'some\nstring\n'
   - Desktop Entry:
     The value of the 'Icon' property is no longer extracted into the POT file
     by xgettext.  The documentation explains how to localize icons.
