--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ Version 0.21 - August 2019
     o xgettext now recognizes 'gettext' program invocations with the '-e'
       option, such as
         gettext -e 'some\nstring\n'
+  - Python:
+    xgettext now assumes a Python source file is in UTF-8 encoding by default,
+    as stated in PEP 3120.
   - Java:
     xgettext now recognizes format strings in the Formatter syntax.  They
     are marked as 'java-printf-format' in POT and PO files.
