--- a/gettext-runtime/NEWS
+++ b/gettext-runtime/NEWS
@@ -1,3 +1,9 @@
+Version 0.21 - September 2019
+
+* The interpretation of the language preferences on macOS has been improved,
+  especially in the case where a system locale does not exist for the
+  combination of the selected primary language and the selected territory.
+
 Version 0.20 - April 2019
 
 * The interpretation of the language preferences on macOS has been fixed.
