xgettext: Recognize 'env' and assignments in Shell scripts.
Reported by Jason Vas Dias <jason.vas.dias@gmail.com>
in <https://lists.gnu.org/archive/html/bug-gettext/2019-08/msg00032.html>.

* gettext-tools/src/x-sh.c (enum word_type): Add t_assignment.
(read_word): Recognize assignments.
(read_command): In a function position, ignore assignments and 'env' tokens.
* gettext-tools/tests/xgettext-sh-7: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* NEWS: Mention the change.

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Version 0.21 - September 2019
 
 * Programming languages support:
   - Shell:
+    o xgettext now recognizes and ignores 'env' invocations and environment
+      variable assignments in front of commands.
     o The programs 'gettext', 'ngettext', when invoked with option -e, now
       expand '\\' and octal escape sequences, instead of swallowing them.
       (Bug present since the beginning.)
