--- a/NEWS
+++ b/NEWS
@@ -14,8 +14,9 @@ Version 0.21 - September 2019
     xgettext now assumes a Python source file is in UTF-8 encoding by default,
     as stated in PEP 3120.
   - Java:
-    xgettext now recognizes format strings in the Formatter syntax.  They
-    are marked as 'java-printf-format' in POT and PO files.
+    o xgettext now recognizes format strings in the Formatter syntax.  They
+      are marked as 'java-printf-format' in POT and PO files.
+    o xgettext now recognizes text blocks as string literals.
   - Desktop Entry:
     The value of the 'Icon' property is no longer extracted into the POT file
     by xgettext.  The documentation explains how to localize icons.
