--- a/libtextstyle/doc/libtextstyle.texi
+++ b/libtextstyle/doc/libtextstyle.texi
@@ -1152,7 +1152,7 @@ Returns a pointer to the output accumulated so far and its size.  It
 stores them in @code{*@var{bufp}} and @code{*@var{buflenp}}, respectively.
 
 Note: These two return values become invalid when more output is done to
-the stream.
+the stream or when the stream is freed.
 @end deftypefn
 
 @node The iconv_ostream class
