libtextstyle: Add ostream_printf, ostream_vprintf functions.
Suggested by José Marchesi.

* libtextstyle/autogen.sh (GNULIB_MODULES): Add 'vasprintf-posix'.
* libtextstyle/gnulib-local/lib/ostream.oo.h: Include <stdarg.h>.
(ostream_printf, ostream_vprintf): New declarations.
* libtextstyle/gnulib-local/lib/ostream.oo.c: Include <stdio.h>.
(ostream_printf, ostream_vprintf): New functions.
* libtextstyle/gnulib-local/lib/styled-ostream.oo.h: Update comments.
* libtextstyle/gnulib-local/lib/term-ostream.oo.h: Likewise.
* libtextstyle/gnulib-local/lib/html-ostream.oo.h: Likewise.
* libtextstyle/lib/textstyle.h: Include <stdio.h>.
(ostream_printf, ostream_vprintf): New functions.
(styled_ostream_flush_to_current_style, term_ostream_flush_to_current_style,
html_ostream_flush_to_current_style): Update comments.
* libtextstyle/doc/libtextstyle.texi (The ostream class): Document
ostream_printf, ostream_vprintf.
(The styled_ostream class, The term_ostream class, The html_ostream class):
Update comments.
* libtextstyle/NEWS: Mention it.
* NEWS: Likewise.

--- a/NEWS
+++ b/NEWS
@@ -28,6 +28,7 @@ Version 0.21 - September 2019
 
 * Libtextstyle:
   - Added support for emitting hyperlinks.
+  - New API for doing formatted output.
   - The example programs support the NO_COLOR environment variable,
 
 Version 0.20.1 - May 2019
