Update after gnulib changed.
* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC_COMMON_DEPENDENCIES): Add
setlocale-null.
* gettext-runtime/intl/localcharset.h: Update from gnulib.
* gettext-runtime/intl/localcharset.c: Likewise.
* gettext-runtime/intl/localename.c: Likewise.
* gettext-runtime/intl/setlocale_null.h: New file, from gnulib.
* gettext-runtime/intl/arg-nonnull.h: New file, from gnulib.
* gettext-runtime/intl/setlocale_null.c: New file, from gnulib.
* gettext-runtime/intl/setlocale-lock.c: New file, from gnulib.
* gettext-runtime/intl/lock.h: Update from gnulib.
* gettext-runtime/intl/lock.c: Likewise.
* gettext-runtime/intl/threadlib.c: Likewise.
* gettext-runtime/intl/vasnprintf.c: Likewise.
* gettext-runtime/intl/verify.h: Likewise.
* gettext-runtime/intl/Makefile.am (EXTRA_DIST): Add arg-nonnull.h,
setlocale_null.h.
(LIBINTLSOURCES): Add setlocale-lock.c, setlocale_null.c.
(setlocale-lock.lo, setlocale_null.lo): New rules.
(localename.lo, setlocale-lock.lo, setlocale_null.lo): Update dependencies.
* Makefile.am (distcheck-hook): Check the new files in gettext-runtime/intl/.
* gettext-runtime/libasprintf/vasnprintf.c: Update from gnulib.
* gettext-tools/libgettextpo/Makefile.am (DEFS): Define OMIT_SETLOCALE_LOCK.
* gettext-runtime/NEWS: Mention the multithread-safety fix in localcharset.c.
* NEWS: Likewise.

--- a/gettext-runtime/NEWS
+++ b/gettext-runtime/NEWS
@@ -1,8 +1,10 @@
-Version 0.21 - September 2019
+Version 0.21 - December 2019
 
 * The interpretation of the language preferences on macOS has been improved,
   especially in the case where a system locale does not exist for the
   combination of the selected primary language and the selected territory.
+
+* Fixed a multithread-safety bug on Cygwin and native Windows.
 
 Version 0.20 - April 2019
 
