--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Version 0.21 - September 2019
+Version 0.21 - December 2019
 
 * Programming languages support:
   - Shell:
@@ -25,11 +25,12 @@ Version 0.21 - September 2019
   - The interpretation of the language preferences on macOS has been improved,
     especially in the case where a system locale does not exist for the
     combination of the selected primary language and the selected territory.
+  - Fixed a multithread-safety bug on Cygwin and native Windows.
 
 * Libtextstyle:
   - Added support for emitting hyperlinks.
   - New API for doing formatted output.
-  - The example programs support the NO_COLOR environment variable,
+  - The example programs support the NO_COLOR environment variable.
 
 Version 0.20.1 - May 2019
 
