--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Version 0.20.2 - April 2020
+
+* Runtime behaviour:
+  - Fixed a multithread-safety bug on Cygwin and native Windows.
+
 Version 0.20.1 - May 2019
 
 * Important bug fix:
