--- a/gettext-runtime/NEWS
+++ b/gettext-runtime/NEWS
@@ -1,3 +1,7 @@
+Version 0.20.2 - April 2020
+
+* Fixed a multithread-safety bug on Cygwin and native Windows.
+
 Version 0.20 - April 2019
 
 * The interpretation of the language preferences on macOS has been fixed.
