--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,7 @@ Version 0.21 - December 2019
   - Added support for emitting hyperlinks.
   - New API for doing formatted output.
   - The example programs support the NO_COLOR environment variable.
+  - Fixed a number of bugs (by upgrading libcroco to version 0.6.13).
 
 Version 0.20.1 - May 2019
 
