po, examples: In the .po -> .gmo rules, really consider the newest changes to the POT file.
Reported by Petr Ovtchenkov <ptr@void-ptr.info> in
<https://lists.gnu.org/archive/html/bug-gnulib/2020-04/msg00000.html>.
Helped by Paul Smith.

* gettext-runtime/po/Makefile.in.in (.po.gmo): Write dependency on the POT file
as a target rule, since inference rules don't support prerequisites.
* gettext-tools/examples/hello-*/po/Makefile.am: Likewise, also for the .po.qm
rule.
* NEWS: Mention the fix.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 Version 0.20.2 - April 2020
 
+* Improvements for maintainers:
+  - A dependency bug in po/Makefile.in.in has been fixed.
+
 * Programming languages support:
   - Shell:
     o The programs 'gettext', 'ngettext', when invoked with option -e, now
