--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+Version 0.21 - April 2020
+
+* Programming languages support:
+  - Shell:
+    o xgettext now recognizes and ignores 'env' invocations and environment
+      variable assignments in front of commands.
+  - Java:
+    o xgettext now recognizes format strings in the Formatter syntax.  They
+      are marked as 'java-printf-format' in POT and PO files.
+    o xgettext now recognizes text blocks as string literals.
+  - JavaScript:
+    xgettext parses JSX expressions more reliably.
+
+* Libtextstyle:
+  - Added support for emitting hyperlinks.
+  - New API for doing formatted output.
+  - The example programs support the NO_COLOR environment variable.
+
 Version 0.20.2 - April 2020
 
 * Improvements for maintainers:
@@ -5,8 +23,6 @@ Version 0.20.2 - April 2020
 
 * Programming languages support:
   - Shell:
-    o xgettext now recognizes and ignores 'env' invocations and environment
-      variable assignments in front of commands.
     o The programs 'gettext', 'ngettext', when invoked with option -e, now
       expand '\\' and octal escape sequences, instead of swallowing them.
       (Bug present since the beginning.)
@@ -16,12 +32,6 @@ Version 0.20.2 - April 2020
   - Python:
     xgettext now assumes a Python source file is in UTF-8 encoding by default,
     as stated in PEP 3120.
-  - Java:
-    o xgettext now recognizes format strings in the Formatter syntax.  They
-      are marked as 'java-printf-format' in POT and PO files.
-    o xgettext now recognizes text blocks as string literals.
-  - JavaScript:
-    xgettext parses JSX expressions more reliably.
   - Desktop Entry:
     The value of the 'Icon' property is no longer extracted into the POT file
     by xgettext.  The documentation explains how to localize icons.
@@ -33,9 +43,6 @@ Version 0.20.2 - April 2020
   - Fixed a multithread-safety bug on Cygwin and native Windows.
 
 * Libtextstyle:
-  - Added support for emitting hyperlinks.
-  - New API for doing formatted output.
-  - The example programs support the NO_COLOR environment variable.
   - Fixed a number of bugs (by upgrading libcroco to version 0.6.13).
 
 Version 0.20.1 - May 2019
