--- a/libtextstyle/NEWS
+++ b/libtextstyle/NEWS
@@ -14,6 +14,8 @@ New in 0.20.5:
   functions ostream_printf, ostream_vprintf.
 * The example programs support the NO_COLOR environment variable,
   as specified in https://no-color.org/.
+
+New in 0.20.2:
 * Fixed a number of bugs (by upgrading libcroco to version 0.6.13).
 
 New in 0.20:
